src/Services/sciServices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sci-erp
  labels:
    app.kubernetes.io/part-of: sci-erp
    app.kubernetes.io/managed-by: kubectl
